syntax = "proto3";

option csharp_namespace = "PDM.TestUtils.ProtoBuf";

message ThreeFields {
  string StringValue = 5;
  float FloatValue = 10;
  int32 IntegerValue = 15;
}
